--- a/server/src/Web/Properties/launchSettings.json
+++ b/server/src/Web/Properties/launchSettings.json
@@ -12,7 +12,7 @@
       "commandName": "Project",
       "dotnetRunMessages": true,
       "launchBrowser": false,
-      "applicationUrl": "https://localhost:7117;http://localhost:5230",
+      "applicationUrl": "http://localhost:7117",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       }
