Configure JWT and implement registration service

--- a/server/src/Web/appsettings.json
+++ b/server/src/Web/appsettings.json
@@ -2,6 +2,11 @@
     "DatabaseSettings": {
         "Name": "humeum"
     },
+    "JwtSettings": {
+        "Key": "developmentOnly",
+        "Issuer": "humeum",
+        "ExpireDays": 30
+    },
     "Logging": {
         "LogLevel": {
             "Default": "Information",
