Generate and return JWT tokens

--- a/server/src/Web/appsettings.json
+++ b/server/src/Web/appsettings.json
@@ -3,7 +3,7 @@
         "Name": "humeum"
     },
     "JwtSettings": {
-        "Key": "developmentOnly",
+        "Key": "myDevelopmentOnlyKey",
         "Issuer": "humeum",
         "ExpireDays": 30
     },
