Save JWT as cookies through JwtApplicationUserService

--- a/server/src/Web/appsettings.json
+++ b/server/src/Web/appsettings.json
@@ -5,7 +5,8 @@
     "JwtSettings": {
         "Key": "myDevelopmentOnlyKey",
         "Issuer": "humeum",
-        "ExpireDays": 30
+        "ExpireDays": 30,
+        "Cookie": "Jwt"
     },
     "Logging": {
         "LogLevel": {
