--- a/server/tests/Web.Test/Web.Test.csproj
+++ b/server/tests/Web.Test/Web.Test.csproj
@@ -24,7 +24,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\src\Web\Web.csproj" />
+    <ProjectReference Include="..\..\src\Web\Web.csproj" />
   </ItemGroup>
 
 </Project>
