--- a/client/package.json
+++ b/client/package.json
@@ -15,6 +15,9 @@
     "@babel/preset-env": "^7.20.2",
     "@babel/preset-react": "^7.18.6",
     "@babel/preset-typescript": "^7.18.6",
+    "@headlessui/react": "^1.7.10",
+    "@mui/material": "^5.11.9",
+    "@mui/types": "^7.2.3",
     "@types/node": "^18.13.0",
     "@types/react": "^18.0.27",
     "@types/react-dom": "^18.0.10",
@@ -26,6 +29,7 @@
     "mini-css-extract-plugin": "^2.7.2",
     "postcss": "^8.4.21",
     "postcss-loader": "^7.0.2",
+    "postcss-preset-env": "^8.0.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router": "^6.8.1",
