--- a/client/package.json
+++ b/client/package.json
@@ -18,6 +18,7 @@
     "@headlessui/react": "^1.7.10",
     "@mui/material": "^5.11.9",
     "@mui/types": "^7.2.3",
+    "@mui/x-data-grid": "^5.17.24",
     "@types/node": "^18.13.0",
     "@types/react": "^18.0.27",
     "@types/react-dom": "^18.0.10",
