--- a/client/package.json
+++ b/client/package.json
@@ -16,6 +16,7 @@
     "@babel/preset-react": "^7.18.6",
     "@babel/preset-typescript": "^7.18.6",
     "@headlessui/react": "^1.7.10",
+    "@mui/icons-material": "^5.11.9",
     "@mui/material": "^5.11.9",
     "@mui/types": "^7.2.3",
     "@mui/x-data-grid": "^5.17.24",
