Create env file, add DB config and server Dockerfile

--- a/server/src/Web/appsettings.json
+++ b/server/src/Web/appsettings.json
@@ -1,6 +1,7 @@
 {
     "DatabaseSettings": {
-        "Name": "humeum"
+        "Name": "humeum",
+        "Username": "humeum"
     },
     "JwtSettings": {
         "Key": "myDevelopmentOnlyKey",
