Create a functional docker-compose setup

--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,5 @@
 DatabaseSettings__Name=humeum
+# 'database' for docker compose main network bridge, 'localhost' for host
+DatabaseSettings__Host=database
 DatabaseSettings__Username=humeum
 DatabaseSettings__Password=changeme
