--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,9 +1,34 @@
 services:
+  database:
+    environment:
+      POSTGRES_DB: ${DatabaseSettings__Name}
+      POSTGRES_USER: ${DatabaseSettings__Username}
+      POSTGRES_PASSWORD: ${DatabaseSettings__Password}
+    expose:
+      - 5432
+    image: postgres:14.1-alpine
+    networks:
+      - main
+    restart: unless-stopped
+    volumes:
+      - data:/var/lib/postgresql/data/
+
   server:
     build: server/
+    depends_on:
+      - database
     env_file:
       - .env
+    ports:  # this is temporary (until we set up nginx)
+      - 80:80
+      - 443:443
     restart: unless-stopped
     networks:
       - main
-    
+  
+volumes:
+  data:
+  
+networks:
+  main:
+    driver: bridge
