Fix docker-compose EF migrations

--- a/server/src/Web/appsettings.json
+++ b/server/src/Web/appsettings.json
@@ -1,8 +1,8 @@
 {
-    "DatabaseSettings": {
-        "Name": "humeum",
-        "Username": "humeum"
-    },
+    //"DatabaseSettings": {
+    //    "Name": "humeum",
+    //    "Username": "humeum"
+    //},
     "JwtSettings": {
         "Key": "myDevelopmentOnlyKey",
         "Issuer": "humeum",
