Add postgres configuration to local dev setup

--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,5 @@
+# valid options are 'postgres' and 'sqlite'
+DatabaseSettings__Database=postgres
 DatabaseSettings__Name=humeum
 # 'database' for docker compose main network bridge, 'localhost' for host
 DatabaseSettings__Host=database
