--- a/server/src/Web/appsettings.json
+++ b/server/src/Web/appsettings.json
@@ -1,8 +1,11 @@
 {
-    //"DatabaseSettings": {
-    //    "Name": "humeum",
-    //    "Username": "humeum"
-    //},
+    "DatabaseSettings": {
+        "Database": "postgres",
+        "Host": "localhost",
+        "Name": "humeum",
+        "Username": "humeum",
+        "Password": "humeum"
+    },
     "JwtSettings": {
         "Key": "myDevelopmentOnlyKey",
         "Issuer": "humeum",
