--- a/client/package.json
+++ b/client/package.json
@@ -6,6 +6,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "dev": "webpack --config webpack.dev.js",
+    "prod": "webpack --config webpack.prod.js",
     "server": "webpack serve --config webpack.dev.js"
   },
   "author": "",
