Create refresh token logic

--- a/server/src/Web/appsettings.json
+++ b/server/src/Web/appsettings.json
@@ -9,8 +9,10 @@
     "JwtSettings": {
         "Key": "myDevelopmentOnlyKey",
         "Issuer": "humeum",
-        "ExpireDays": 30,
-        "Cookie": "Jwt"
+        "Cookie": "Jwt",
+        "CookieExpireMinutes": 1,
+        "RefreshCookie": "JwtRefresh",
+        "RefreshCookieExpireDays": 30
     },
     "Logging": {
         "LogLevel": {
