--- a/client/package.json
+++ b/client/package.json
@@ -32,6 +32,7 @@
     "copy-webpack-plugin": "^11.0.0",
     "css-loader": "^6.7.3",
     "dayjs": "^1.11.7",
+    "echarts-for-react": "^3.0.2",
     "html-webpack-plugin": "^5.5.0",
     "mini-css-extract-plugin": "^2.7.2",
     "postcss": "^8.4.21",
